<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/legend_rainfall"
    android:background="#ffffffff">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:id="@+id/tableLayout">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView_landUse"
                android:layout_column="0"
                android:background="#ffe9383b"
                android:text="ok"
                android:textColor="#ffe9383b"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rain1"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:background="#ffda8d70"
                android:text="ok"
                android:textColor="#ffda8d70"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rain2"
                android:id="@+id/textView4"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:background="#E14FFF6D"
                android:text="ok"
                android:textColor="#e14fff6d"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rain3"
                android:id="@+id/textView6"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView7"
                android:layout_column="0"
                android:background="#f7ea73ff"
                android:text="ok"
                android:textColor="#f7ea73ff"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rain4"
                android:id="@+id/textView8"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView9"
                android:layout_column="0"
                android:background="#ff8521ff"
                android:text="ok"
                android:textColor="#ff8521ff"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rain5"
                android:id="@+id/textView10"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView11"
                android:layout_column="0"
                android:background="#ffffffff"
                android:text="ok"
                android:textColor="#ffffffff"
                android:autoText="false"
                android:layout_gravity="center"
                android:textSize="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="All Rainfall Amounts are in Millimeters per year"
                android:id="@+id/textView12"
                android:layout_column="1"
                android:textSize="16dp"
                android:background="#ffffffff" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dismiss"
        android:id="@+id/dismiss_button"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
